# pinchat

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  NOTICE  PROTOCOL.md  README.md  SECURITY.md  docker-compose.yml  generate-certs.sh  hashes.json.signed
extensions/: README.md  generate-hashes.js  generate-icons.sh  hashes.json.example
extensions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js  warning.css
extensions/firefox/: background.js  content.js  manifest.json  popup.html  popup.js
extensions/shared/: verify.js
src/: auth.rs  auth_middleware.rs  challenge_cache.rs  cleanup.rs  config.rs  ip_hash.rs  jwt.rs  main.rs  pow.rs  rate_limit_extractor.rs  session.rs
src/handlers/: auth.rs  http.rs  mod.rs  websocket.rs  ws_token.rs
src/models/: message.rs  mod.rs  room.rs
src/state/: app_state.rs
static/: chat.html  index.html  login.html  test_sas.html
static/css/: style.css
static/js/: app.js  crypto.js  debug.js  double-ratchet.js  ecdh.js  emoji.js  homepage.js  identity.js  login.js  nicknames.js  pow.js  websocket.js
stress-tests/: Cargo.toml  README.md
stress-tests/src/: capacity_tests.rs  concurrent_tests.rs  ddos_tests.rs  helpers.rs  http_tests.rs  lib.rs  pow_tests.rs  ws_tests.rs
tests/: README.md  run-all-tests.js  test-chain-ratchet.js  test-double-ratchet.js
tests/vectors/: signal-protocol-vectors.json
