[package]
name = "pinchat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower_governor = "0.4"
dashmap = "5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
futures-util = "0.3"
dotenvy = "0.15"
argon2 = "0.5"
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

[[bin]]
name = "generate_hash"
path = "src/bin/generate_hash.rs"
