[package]
name = "pinchat-stress-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tokio-test = "0.4"
